Main Refactor and Flask Init

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 config.ini
+__pycache__/
 .idea/
 websites/
 scraper/aktuality.py
 scraper/data/
 scraper/logs/
 scraper/__pycache__/
+api/__pycache__
